--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,31 @@ code {
 .List{
   margin-left: 25px;
 }
+
+h1 {
+  margin-bottom: 20px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 55px;
+  font-weight: 100;
+  letter-spacing: 30px;
+  text-shadow: 3px 3px 5px #000;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0 0 0 10px;
+  min-width: 460px;
+}
+
+.img{
+  margin-top: 20px;
+  width: 350px;
+  height: 430px;
+}
+
+*,
+#content :first-child,
+#content :last-child {
+  margin-left: 25px;
+}
