--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ code {
 
 h1 {
   margin-bottom: 20px;
-  color: #fff;
+  color: black;
   text-transform: uppercase;
   font-size: 55px;
   font-weight: 100;
@@ -52,16 +52,11 @@ nav ul {
   list-style: none;
   padding: 0 0 0 10px;
   min-width: 460px;
+  margin-left: 25px;
 }
 
 .img{
   margin-top: 20px;
-  width: 350px;
+  width: 850px;
   height: 430px;
-}
-
-*,
-#content :first-child,
-#content :last-child {
-  margin-left: 25px;
 }
