--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,17 @@ nav ul {
     width: 850px;
     height: 430px;
 }
+
+.font-size {
+  font-size: 16px;
+}
+
+.size {
+  width: 250px;
+}
+
+.position {
+  position: absolute;
+  left: 300px;
+  top: 33px;
+}
